fix: left-align text in work cards

--- a/src/components/content/Work/work.scss
+++ b/src/components/content/Work/work.scss
@@ -111,6 +111,7 @@ $mobile-breakpoint: 37.5em;
     @include mix.button-reset;
     @include mix.glass-effect(15px, 0.3); // Increased blur and opacity
     @include mix.clickable;
+    text-align: left;
 
     padding: 2rem 3rem;
     margin: 0.2rem;
